[Desktop Linux]: Fix copy and pasting long selections

When a client requests the clipboard selection and Chrome has a long selection
Chrome sends the data incrementally. Chrome transfers the clipboard data to the
client via a property on the client X Window. The client deletes the property to
indicate to Chrome that Chrome can send the next bit of data. Chrome listens for
the deletion XPropertyEvent from the client.

This CL fixes a bug where Chrome would stop listening for XPropertyEvents on the
client X Window after finishing servicing the client's first request instead of
after servicing all of the client's requests.

BUG=686499

Review-Url: https://codereview.chromium.org/2700043002
Cr-Commit-Position: refs/heads/master@{#451932}

Former-commit-id: c8d772b0617ab7f2d15fc2e0bf02ada35dd21cfc